// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 jEuAvl"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ any props 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 jEuAvl className"
  id="id"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ buttons 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 fRKFNG"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      &gt;This is a test alert message.
    </div>
    <div
      class="Alertstyles__Actions-sc-18uul3b-4 eOzpup"
    >
      <div
        class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
      >
        <div
          class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
        >
          <button
            class="Buttonstyles__Box-qfvnbt-0 bAEoKT"
            type="button"
          >
            <span
              class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
            >
              Complete
            </span>
          </button>
        </div>
        <div
          class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
        >
          <button
            class="Buttonstyles__Box-qfvnbt-0 hDikLl"
            type="button"
          >
            <span
              class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert w/ compact 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 dcAeWS"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 jEuAvl"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 2`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 htZvst"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
      />
      <path
        clip-rule="evenodd"
        d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 3`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 hRBRsM"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 4`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 fskUvJ"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ dynamic 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 cuFPjJ"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/o icon 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 jEuAvl"
>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div
      class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/o title 1`] = `
<div
  class="Alertstyles__Box-sc-18uul3b-3 jEuAvl"
>
  <div
    class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
  >
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;
